test_files/netlist_footer_cmp/invalid/invalid_case_03_a.net
V1 IN 0 1
R1 IN OUT 10k
C1 OUT 0 10n
.ac dec 20 1 1Meg
.include filters.lib
.backanno
.end
